// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar base demo works fine 1`] = `
<div
  class="demo-avatar"
>
  <div
    class="t-avatar t-avatar--circle"
  >
    <img
      alt=""
      src="https://tdesign.gtimg.com/site/avatar.jpg"
    />
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <svg
      class="t-icon t-icon-user"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    
    <svg
      class="t-icon t-icon-user"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </div>
</div>
`;

exports[`Avatar group demo works fine 1`] = `
<div
  class="demo-avatar"
>
  <div
    class="demo-avatar-block"
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`Avatar groupCascading demo works fine 1`] = `
<div
  class="demo-avatar"
>
  <div
    class="demo-avatar-block"
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
  >
    <div
      class="t-avatar-group t-avatar--offset-left"
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`Avatar groupMax demo works fine 1`] = `
<div
  class="demo-avatar"
>
  <div
    class="demo-avatar-block"
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
    >
      
      
      
      <div
        class="t-avatar t-avatar--circle"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          Avatar
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          +1
          
        </span>
      </div>
      
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
    >
      
      
      
      <div
        class="t-avatar t-avatar--circle"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          Avatar
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        
        <svg
          class="t-icon t-icon-ellipsis"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
        <span>
          
          
          
        </span>
        
      </div>
      
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
    >
      
      
      
      <div
        class="t-avatar t-avatar--circle"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          Avatar
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          
          
        </span>
      </div>
      
      
      
    </div>
  </div>
</div>
`;

exports[`Avatar shape demo works fine 1`] = `
<div
  class="demo-avatar"
>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--round"
  >
    <span>
      
       W 
      
    </span>
  </div>
</div>
`;

exports[`Avatar size demo works fine 1`] = `
<div
  class="demo-avatar"
>
  <div
    class="demo-avatar-block"
  >
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
         W 
        
      </span>
    </div>
  </div>
  <div
    class="demo-avatar-block"
  >
    <div
      class="t-avatar t-avatar--round"
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--round"
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--round"
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--round"
    >
      <span>
        
         W 
        
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar size demo works fine 2`] = `
<div
  class="demo-avatar"
>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      王
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      王亿
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      王亿亿
      
    </span>
  </div>
</div>
`;
